fix issue for menu on mobile devices

--- a/sites/all/themes/water/css/media-queries.css
+++ b/sites/all/themes/water/css/media-queries.css
@@ -87,6 +87,12 @@
         margin: 0;
         z-index: 9999;
         font-size: smaller;
+        height: auto;
+        -webkit-backface-visibility:hidden;
+    }
+    nav.main.fixed.scroll{
+        overflow-y: auto;
+        height: 100%;
     }
     .main.fixed > ul ul, .main.fixed ul.slimmenu li a:hover {
         background: none;
